--- a/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
@@ -62,11 +61,17 @@
                               <Button fx:id="insertBtn" mnemonicParsing="false" onAction="#insertFn">
                                  <graphic>
                                     <FontAwesomeIconView glyphName="ARROW_DOWN" size="18" />
-                                 </graphic></Button>
+                                 </graphic>
+                           <tooltip>
+                              <Tooltip text="Insert cassette" />
+                           </tooltip></Button>
                               <Button fx:id="ejectBtn" mnemonicParsing="false" onAction="#ejectFn">
                                  <graphic>
                                     <FontAwesomeIconView glyphName="EJECT" size="18" />
-                                 </graphic></Button>
+                                 </graphic>
+                           <tooltip>
+                              <Tooltip text="Eject cassette" />
+                           </tooltip></Button>
                            </children>
                            <padding>
                               <Insets left="10.0" right="10.0" />
@@ -101,7 +106,10 @@
                               <Button fx:id="resetCounterBtn" mnemonicParsing="false" onAction="#resetCounterFn">
                                  <graphic>
                                     <FontAwesomeIconView glyphName="REFRESH" size="18" />
-                                 </graphic></Button>
+                                 </graphic>
+                           <tooltip>
+                              <Tooltip text="Reset counter" />
+                           </tooltip></Button>
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -169,7 +177,13 @@
                                  <graphic>
                                     <FontAwesomeIconView glyphName="STOP" size="18" />
                                  </graphic></Button>
-                              <Button fx:id="previousSongBtn" mnemonicParsing="false" onAction="#previousSongFn" />
+                              <Button fx:id="previousSongBtn" mnemonicParsing="false" onAction="#previousSongFn">
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="ARROW_LEFT" size="18" />
+                                 </graphic>
+                                 <tooltip>
+                                    <Tooltip text="Previous song" />
+                                 </tooltip></Button>
                               <Button fx:id="fastRewindBtn" mnemonicParsing="false" onAction="#fastRewindFn">
                                  <graphic>
                                     <FontAwesomeIconView glyphName="FAST_BACKWARD" size="18" />
@@ -178,8 +192,17 @@
                                  <graphic>
                                     <FontAwesomeIconView glyphName="FAST_FORWARD" size="18" />
                                  </graphic></Button>
-                              <Button fx:id="nextSongBtn" mnemonicParsing="false" onAction="#nextSongFn" />
-                              <Button fx:id="autoReverseBtn" mnemonicParsing="false" onAction="#autoReverseFn" text="AR" />
+                              <Button fx:id="nextSongBtn" mnemonicParsing="false" onAction="#nextSongFn">
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="ARROW_RIGHT" size="18" />
+                                 </graphic>
+                                 <tooltip>
+                                    <Tooltip text="Next song" />
+                                 </tooltip></Button>
+                              <Button fx:id="autoReverseBtn" mnemonicParsing="false" onAction="#autoReverseFn" text="AR">
+                                 <tooltip>
+                                    <Tooltip text="Auto Reverse" />
+                                 </tooltip></Button>
                            </children>
                         </HBox>
                      </children>
