--- a/implementation/workspace/cassette-deck/src/main/resources/doubleDeck.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/doubleDeck.fxml
@@ -87,7 +87,7 @@
                                  <font>
                                     <Font name="Verdana" size="13.0" />
                                  </font></Label>
-                              <Label style="-fx-text-fill: #DCDCDC;" text="STATUS">
+                              <Label fx:id="statusL" style="-fx-text-fill: #DCDCDC;" text="STATUS">
                                  <font>
                                     <Font name="Verdana" size="13.0" />
                                  </font></Label>
@@ -100,7 +100,7 @@
                      <right>
                         <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Label style="-fx-text-fill: #DCDCDC;" text="TIME">
+                              <Label fx:id="counter2L" style="-fx-text-fill: #DCDCDC;" text="TIME">
                                  <font>
                                     <Font name="Verdana" size="13.0" />
                                  </font></Label>
@@ -324,7 +324,7 @@
                                  <font>
                                     <Font name="Verdana" size="13.0" />
                                  </font></Label>
-                              <Label style="-fx-text-fill: #DCDCDC;" text="STATUS">
+                              <Label fx:id="status2L" style="-fx-text-fill: #DCDCDC;" text="STATUS">
                                  <font>
                                     <Font name="Verdana" size="13.0" />
                                  </font></Label>
