--- a/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
@@ -48,74 +48,74 @@
       <VBox fx:id="deckControllerVB" spacing="10.0">
          <children>
             <BorderPane>
-                     <left>
-                        <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-                           <children>
-                              <Button fx:id="flipBtn" mnemonicParsing="false" onAction="#flipFn">
-                                 <graphic>
-                                    <FontAwesomeIconView glyphName="ROTATE_RIGHT" size="18" />
-                                 </graphic>
-                                 <tooltip>
-                                    <Tooltip text="Flip cassette" />
-                                 </tooltip></Button>
-                              <Button fx:id="insertBtn" mnemonicParsing="false" onAction="#insertFn">
-                                 <graphic>
-                                    <FontAwesomeIconView glyphName="ARROW_DOWN" size="18" />
-                                 </graphic>
+               <left>
+                  <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button fx:id="flipBtn" mnemonicParsing="false" onAction="#flipFn">
+                           <graphic>
+                              <FontAwesomeIconView glyphName="ROTATE_RIGHT" size="18" />
+                           </graphic>
+                           <tooltip>
+                              <Tooltip text="Flip cassette" />
+                           </tooltip></Button>
+                        <Button fx:id="insertBtn" mnemonicParsing="false" onAction="#insertFn">
+                           <graphic>
+                              <FontAwesomeIconView glyphName="ARROW_DOWN" size="18" />
+                           </graphic>
                            <tooltip>
                               <Tooltip text="Insert cassette" />
                            </tooltip></Button>
-                              <Button fx:id="ejectBtn" mnemonicParsing="false" onAction="#ejectFn">
-                                 <graphic>
-                                    <FontAwesomeIconView glyphName="EJECT" size="18" />
-                                 </graphic>
+                        <Button fx:id="ejectBtn" mnemonicParsing="false" onAction="#ejectFn">
+                           <graphic>
+                              <FontAwesomeIconView glyphName="EJECT" size="18" />
+                           </graphic>
                            <tooltip>
                               <Tooltip text="Eject cassette" />
                            </tooltip></Button>
-                           </children>
-                           <padding>
-                              <Insets left="10.0" right="10.0" />
-                           </padding>
-                        </HBox>
-                     </left>
-                     <center>
-                        <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-                           <children>
-                              <Label style="-fx-text-fill: #DCDCDC;" text="Deck">
-                                 <font>
-                                    <Font name="Verdana" size="13.0" />
-                                 </font></Label>
-                              <Label style="-fx-text-fill: #DCDCDC;" text="STATUS">
-                                 <font>
-                                    <Font name="Verdana" size="13.0" />
-                                 </font></Label>
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                        </VBox>
-                     </center>
-                     <right>
-                        <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-                           <children>
-                              <Label style="-fx-text-fill: #DCDCDC;" text="TIME">
-                                 <font>
-                                    <Font name="Verdana" size="13.0" />
-                                 </font></Label>
-                              <ProgressBar progress="0.0" />
-                              <Button fx:id="resetCounterBtn" mnemonicParsing="false" onAction="#resetCounterFn">
-                                 <graphic>
-                                    <FontAwesomeIconView glyphName="REFRESH" size="18" />
-                                 </graphic>
-                           <tooltip>
-                              <Tooltip text="Reset counter" />
-                           </tooltip></Button>
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                        </VBox>
-                     </right>
+                     </children>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </HBox>
+               </left>
+               <center>
+                  <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label style="-fx-text-fill: #DCDCDC;" text="Deck">
+                           <font>
+                              <Font name="Verdana" size="13.0" />
+                           </font></Label>
+                        <Label fx:id="statusL" style="-fx-text-fill: #DCDCDC;" text="STATUS">
+                           <font>
+                              <Font name="Verdana" size="13.0" />
+                           </font></Label>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </center>
+               <right>
+                  <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label fx:id="counterL" style="-fx-text-fill: #DCDCDC;" text="TIME">
+                           <font>
+                              <Font name="Verdana" size="13.0" />
+                           </font></Label>
+                        <ProgressBar progress="0.0" />
+                        <Button fx:id="resetCounterBtn" mnemonicParsing="false" onAction="#resetCounterFn">
+                           <graphic>
+                              <FontAwesomeIconView glyphName="REFRESH" size="18" />
+                           </graphic>
+                     <tooltip>
+                        <Tooltip text="Reset counter" />
+                     </tooltip></Button>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </right>
             </BorderPane>
             <HBox fx:id="playerAndRecorderHB" spacing="10.0">
                <children>
