--- a/implementation/workspace/cassette-deck/src/main/resources/doubleDeck.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/doubleDeck.fxml
@@ -104,7 +104,7 @@
                                  <font>
                                     <Font name="Verdana" size="13.0" />
                                  </font></Label>
-                              <ProgressBar progress="0.0" />
+                              <ProgressBar fx:id="progressPB" />
                               <Button fx:id="resetCounterBtn" mnemonicParsing="false" onAction="#resetCounter1Fn">
                                  <graphic>
                                     <FontAwesomeIconView glyphName="REFRESH" size="18" />
@@ -341,7 +341,7 @@
                                  <font>
                                     <Font name="Verdana" size="13.0" />
                                  </font></Label>
-                              <ProgressBar progress="0.0" />
+                              <ProgressBar fx:id="progress2PB" />
                               <Button fx:id="resetCounter2Btn" mnemonicParsing="false" onAction="#resetCounter2Fn">
                                  <graphic>
                                     <FontAwesomeIconView glyphName="REFRESH" size="18" />
